@@ -1,3 +1,4 @@
+4/6/12 generalize workaround for toImage clipping, move to piccolo-phet (PadBoundsNode)
 4/6/12 when "Hide Lines" is unchecked, disable related controls: y=x, y=-x, Slope
 4/6/12 change "Slope" check box icon to show both rise and run, connect ends of brackets with dashed line
 4/6/12 delete "Point Tool" check box, make it always visible
